Bug 11132 - evaluate ACPI 3.0 _TTS
Summary: evaluate ACPI 3.0 _TTS
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: ykzhao
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-20 14:16 UTC by Len Brown
Modified: 2008-10-24 23:12 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.27
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
the patch for supporting _TTS object (4.16 KB, patch)
2008-08-11 19:31 UTC, ykzhao
Details | Diff

Description Len Brown 2008-07-20 14:16:52 UTC
_TTS was added to the suspend/resume order in ACPI 3.0.
I have not (yet) seen a system that implements _TTS.

However, Linux should support _TTS so that we are
not suprised when/if it suddenly appears in production BIOS.

I expect this simply means...

acpi_suspend_begin(pm_state):
  _TTS(acpi_state)

and

acpi_pm_end()
  _TTS(0)
Comment 1 ykzhao 2008-08-11 19:31:39 UTC
Created attachment 17181 [details]
the patch for supporting _TTS object

This patch is to add the support for the _TTS object.

The _TTS control method is executed by the OSPM at the beginning of the sleep transition process for S1,S2, S3, S4, and orderly S5 shutdown. The target sleep state is passed to the _TTS control method.

The _TTS control method is also executed by the OSPM at the end of any sleep transition process when the system transitions to S0 from S1, S2, S3, or S4. The working state value (0) is passed to the _TTS control method.
Comment 2 ykzhao 2008-08-11 19:39:14 UTC
The patch is available and the bug will be marked as resovled.

But unfortunately there is no system that implements the _TTS object and we have no chance to test it. When the exists the system that implements the _TTS object and there exist some problems related with the _TTS object, please reopen it.

Thanks.
Comment 3 Len Brown 2008-10-16 18:04:39 UTC
latest version of this patch is in the acpi-test tree,
staged for 2.6.28.1

Author: Zhao Yakui <yakui.zhao@intel.com>  2008-08-11 22:20:22
Committer: Len Brown <len.brown@intel.com>  2008-10-16 20:45:18
Parent: a68823ee5285e65b51ceb96f8b13a5b4f99a6888 (ACPI: Clear WAK_STS on resume)
Child:  a6629105dd03d370fcb31e97bddf223fa4bb651e (ACPI suspend: Always use the 32-bit waking vector)
Branch: suspend
Follows: v2.6.27
Precedes: 

    ACPI: Add the support for _TTS object
Comment 4 Len Brown 2008-10-24 23:12:01 UTC
shipped in linux-2.6.28-rc1
closed

commit e49f711cc8f3bf8d719a9f5c86e79ecc0a72bf70
Author: Zhao Yakui <yakui.zhao@intel.com>
Date:   Tue Aug 12 10:20:22 2008 +0800

    ACPI: Add the support for _TTS object

Note You need to log in before you can comment on or make changes to this bug.